  AES shell buffer during restart. (RFB)

2012-04-24
- aes/geminit.c: Create separate buffer for desktop environment (avoid
  sharing AES shell buffer). (RFB)

2012-04-25
- aes/gemgsxif.c aes/gemgsxif.h aes/geminit.c bios/screen.c bios/screen.h
  desk/deskapp.c doc/reschange.txt: Allow desktop resolution/mode to be
  saved in / restored from EMUDESK.INF. (RFB)
- desk/deskapp.c: Fix crash on ST/TT due to accessing I/O memory in user
  mode. (RFB)
- aes/gemgsxif.c aes/gemshlib.c include/compat.h: Code cleanup: removed
  GEMDOS #define and made code dependent on it always compile. (RFB)
- desk/deskapp.c desk/deskapp.h desk/deskins.c include/compat.h: Code
  cleanup: removed ALCYON #define and made code dependent on it always
  compile. (RFB)
- aes/gemobjop.c: Code cleanup: eliminated LBYTE2 & LBYTE3 compatibility
  macros. (RFB)
- include/compat.h: Code cleanup: removed unused compatibility macros
  and externs. (RFB)

2012-04-30
- doc/resource.txt tools/erd.c: Reworked ERD to save more space when
  compiling the 192K ROMS. (RFB)
- desk/deskapp.c: Fix bad desktop display after resolution change in
  192k ROMs (bug introduced by changes of 2012-04-16). (RFB)
- desk/deskinf.c: Added some warning comments re SFCB. (RFB)
- desk/deskapp.c: Eliminated duplicate desktop data that already exists
  in the built-in resource. (RFB)

2012-05-01
- vdi/vdi_defs.h vdi/vdi_gdp.c vdi/vdi_line.c: Fix bug: arrows are now
  drawn correctly for thin line arcs/ellarcs. (RFB)
- vdi/vdi_defs.h vdi/vdi_gdp.c vdi/vdi_line.c: Replace common code to
  set LN_MASK with subroutine. (RFB)
- vdi/vdi_gdp.c: Fix bug: line styles are now used for thin line arcs
  and ellarcs. (RFB)

2012-05-02
- vdi/vdi_line.c: Fix bug: arrows are now drawn correctly for all arcs
  and ellarcs. (RFB)

2012-05-03
- vdi/vdi_col.c vdi/vdi_fill.c: Fix bug: v_get_pixel() did not return the
  VDI colour index correctly in all cases. (RFB)

2012-05-08
- bios/country.c: Fix wrong keyboard layout read from the NVRAM. (VRI)